--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 ColorTheme: 1 #1 - Default Theme / 2 - Martin Theme / 3 - Custom (change values bellow)
-WindowsMode: False #True - default windows window mode / False - Custom
+WindowsMode: false #true - default windows window mode / false - Custom
 Colors:
   ColorMain: "#20232c"
   ColorActivatedMain: "#0f1014"
